--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,3 +26,12 @@ anyio>=3.7.1,<4.0.0
 
 # Optional dev / typing
 typing-extensions==4.12.2
+
+pydantic[email]==2.5.2
+email-validator>=2.2.0
+
+bcrypt==4.0.1
+python-jose==3.3.0
+
+# Form data handling
+python-multipart==0.0.7
