--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build || true",
-    "start": "next start",
+    "build": "next build",
+    "start": "next start -p $PORT",
     "lint": "eslint",
     "tailwind:init": "tailwindcss init -p"
   },
