--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.13.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
